# clockwork

./: .gitignore  CHANGELOG  HACKING  INSTALL  MESH  Makefile  Makefile.am  NOTES  PLATFORMS  RESOURCES  TODO  aclocal.m4  ast.c  ast.h  augcw.c  augcw.h  cert.c  cert.h  client.c  client.h  clockwork.h  clockworkd.c  confdump.c  config.c  config.dist  config.h  configure  configure.ac  configure.dev  cw-localsys  cw-template-tt  cwa.c  cwca.c  cwcert.c  cwdb  cwpol.c  cwtool  daemon.c  daemon.h  db.c  (+82 more)
cli/: cw-cc.c  cw-localsys  cw-mesh.c  cw-shell.c  cw-template-erb  cw.c  mesh-builtin
conf/: grammar.c  grammar.h  grammar.y  lexer.c  lexer.l  lexer_impl.c  parser.c  parser.h  private.h
config/: grammar.y  lexer.l  lexer_impl.c  parser.c  private.h
debian/: README.Debian  README.source  changelog  clockwork-agent-dbg.lintian-overrides  clockwork-agent.cogd.init  clockwork-agent.dirs  clockwork-agent.examples  clockwork-agent.install  clockwork-agent.lintian-overrides  clockwork-agent.postinst  clockwork-common.install  clockwork-common.lintian-overrides  clockwork-common.postinst  clockwork-doc.install  clockwork-doc.lintian-overrides  clockwork-mesh-client.install  clockwork-mesh-client.lintian-overrides  clockwork-mesh-server-dbg.lintian-overrides  clockwork-mesh-server.examples  clockwork-mesh-server.install  clockwork-mesh-server.lintian-overrides  clockwork-mesh-server.meshd.init  clockwork-mesh-server.postinst  clockwork-mesh-server.prerm  clockwork-server-dbg.lintian-overrides  clockwork-server.clockd.init  clockwork-server.dirs  clockwork-server.examples  clockwork-server.install  clockwork-server.lintian-overrides  clockwork-server.postinst  clockwork-server.prerm  clockwork.cron.d.ex  clockwork.default  clockwork.default.ex  clockwork.doc-base.EX  control  copyright  emacsen-install.ex  emacsen-remove.ex  (+16 more)
debian/source/: options
debug/: package-manager.c  service-manager.c
doc/: doxy.api.conf  proto-cert.dot  proto.dot
doc/lang/: conditional
doc/theme/: footer.html  header.html  style.css
examples/: clockd.conf  cogd.conf  cw.conf  meshd.conf
ext/: build-openssl
extra/: cwa.vim  ft-agent.vim  ft-server.vim  pol.vim  policyd.init  policyd.vim
extras/doc/: SECURITY  proto-agent.dot  threat-model.dot
extras/misc/: package-manager.c  polspec.c  service-manager.c  sha1sum.c  tplspec.c
extras/rpm/: clockd.init  clockwork.spec
facts/: core
gather.d/: clockwork.in  core  time
gear/: gear.h  hash.c  log.c
help/: about.help  clear.help  cli.help  help.help  load.help  main  quit.help  show.help
man/: build  clockd.1  clockd.1.pod  clockd.8.pod  clockd.conf.5  clockd.conf.5.pod  clockwork.7  clockwork.7.pod  cogd.1  cogd.1.pod  cogd.8.pod  cogd.conf.5  cogd.conf.5.pod  cw-cc.1  cw-cc.1.pod  cw-cert.1  cw-cert.1.pod  cw-fact.1  cw-fact.1.pod  cw-help.1.pod  cw-localsys.1  cw-localsys.8.pod  cw-mesh.1.pod  cw-shell.1  cw-shell.1.pod  cw-template-erb.8.pod  cw-template-tt.8.pod  cw-trust.1  cw-trust.1.pod  cw-uuid.1.pod  cw.conf.5.pod  cwa.1  cwa.conf.5  cwca.1  cwcc.1  cwcert.1  cwkey.1  cwpol.1  cwtemplate.1  cwtool.1  (+30 more)
man/tpl/: res_.5
managers/: package.c  package.h  service.c  service.h
rpm/: clockwork.spec
samples/: cwa.conf  manifest.pol  policyd.conf
schema/: agent.sql  master.sql
scripts/debian/: cw-pkg  cw-svc
scripts/redhat/: cw-pkg  cw-svc
scripts/unspec/: cw-pkg  cw-svc
share/db/: agent.sql  master.sql
share/examples/: cwa.conf  cwcert.answers  manifest.pol  policyd.conf
share/gather.d/: core
share/help/: about.help  cli.help  fact.help  main  show.help  use.help
share/man/: clockwork.7  cwa.1  cwa.conf.5  cwca.1  cwpol.1  cwtemplate.1  policyd.1  policyd.conf.5  res_dir.5  res_exec.5  res_file.5  res_group.5  res_host.5  res_package.5  res_service.5  res_sysctl.5  res_user.5
share/rpm/: policyd.init
share/vim/: pol.vim
spec/: grammar.c  grammar.h  grammar.y  grammar_impl.c  lexer.c  lexer.l  lexer_impl.c  parser.c  parser.h  parser.y  private.h
src/: augcw.c  augcw.h  authdb.c  authdb.h  authtest.c  base.c  base.h  bdfa.c  cert.c  cert.h  client.c  client.h  clockd.c  clockwork.h  clockwork.h.in  cogd.c  conffile.c  conffile.h  ctest.c  ctest.h  cw-cc.c  cw-mesh.c  cw-run.c  cw-shell.c  cw.c  cw.h  cwa.c  cwca.c  cwcc.c  cwcert.c  cwkey.c  cwpol.c  cwspec.c  cwtemplate.c  cwtrust.c  db.c  db.h  exec.c  exec.h  fact.c  (+43 more)
src/conf/: grammar.c  grammar.h  grammar.y  lexer.c  lexer.l  lexer_impl.h  parser.c  parser.h  private.h
src/gear/: gear.h  hash.c  log.c  pack.c  path.c  string.c
src/managers/: package.c  package.h  service.c  service.h
src/spec/: README  grammar.c  grammar.h  grammar.y  grammar_impl.h  lexer.c  lexer.l  lexer_impl.h  parser.c  parser.h  private.h
src/tpl/: grammar.c  grammar.h  grammar.y  lexer.c  lexer.l  lexer_impl.h  parser.c  parser.h  private.h
stdlib/: files.pn  pkg.pn  users.pn
t/: 00-bits.c  01-string.c  02-escapes.c  02-pdu.c  03-basex.c  04-hash.c  05-mem.c  06-cache.c  06-pack.c  07-sha1.c  08-list.c  09-curve.c  10-facts.c  11-cmd.c  12-filter.c  13-acl.c  15-path.c  16-reactor.c  20-stree.c  22-job.c  25-resource.c  30-policy.c  31-template.c  40-userdb.c  41-authdb.c  50-proto.c  55-cert.c  61-res_user.c  62-res_file.c  63-res_group.c  64-res_dir.c  65-res_host.c  66-res_sysctl.c  67-res_service.c  68-res_package.c  69-res_exec.c  70-managers.c  70-res_symlink.c  80-pendulum.t  81-gencode.t  (+19 more)
t/base/: conf.c
t/bdfa/: 01-basics.t
t/cmd/: 01-show.t
t/cw/: 01-ps.t  02-lock.t
t/data/: cert.pub
test/: assertions.c  assertions.h  ast.c  cert.c  env.h  fact.c  hash.c  host_registry.c  init.h  job.c  list.c  local.h  mem.c  pack.c  path.c  policy.c  prep  proto.c  res_file.c  res_group.c  res_user.c  resource.c  resources.c  run.c  serialize.c  setup.sh  sha1.c  stree.c  string.c  stringlist.c  template.c  test.c  test.h  userdb.c
tools/: openssl.supp  valgrind
tpl/: README  grammar.c  grammar.h  grammar.y  lexer.c  lexer.l  lexer_impl.c  parser.c  parser.h  private.h
util/: bundle  gencert  gprof2dot  nocomment  revokecert  rootca  showcert  signcert
(+367 files in other folders)
